# tocabi_cc

./: CMakeLists.txt
LIPFM_CEN/: angmom_de.txt  angmom_re.txt  comd_re.txt  comd_ref.txt  lfpos.txt  phase.txt  rfpos.txt  zmp_est.txt  zmpb.txt
config/: MPCgain (copy).yaml  MPCgain.yaml
include/: cc.h  d_tools.c  d_tools.h  pinocchio.h  walking.h
python/: leg_test.py  lipm_socket.cpp  lipm_socket.py  lipm_socketRealexp.py  lipm_test_good.py
robots/: dyros_tocabi_with_redhands.urdf
src/: cc.cpp  cc_0422  cc_back  cc_back1  cc_back2  cc_back3  cc_new.cpp  cc_normal.cpp  cc_should.cpp  cc_should2.cpp  cc_shouldINT.cpp  cc_shouldInt.cpp  cc_variableDis.cpp  mom  walking.cpp
urdf/: tocabi.urdf
wpwkfl/: angmom_de.txt  angmom_re.txt  angmom_re_lipm.txt  com_ref.txt  com_ref_lipm2.txt  comd_re.txt  comd_re_lipm.txt  comd_re_lipm2.txt  comd_ref_lipm.txt  comd_ref_lipm2.txt  lfpos1.txt  phase.txt  phase_lipm.txt  rfpos1.txt  zmp_des.txt  zmp_des_lipm2.txt  zmp_est.txt  zmp_est_lipm.txt  zmpbx1.txt  zmpby1.txt
wpwkflup1/: angmom_de_lipm.txt  angmom_re_lipm.txt  com_ref_lipm.txt  comd_re_lipm.txt  lfpos1.txt  phase_lipm.txt  rfpos1.txt  zmp_des_lipm.txt  zmp_est_lipm.txt
